Sync changes to hosts - Access host deprecated - Corrected paths and volumes mapping - Removed Nginx & Pi-Alert containers - Added Dashy container - Using Traefik as proxy - Implemented restart handlers for the relevant services - Corrected global and per machine variables - Corrected AdGuard home configuration

--- a/host_vars/hassio.cklan/vars.yml
+++ b/host_vars/hassio.cklan/vars.yml
@@ -1,13 +1,13 @@
 ansible_ssh_user: pi
 ansible_python_interpreter: /usr/bin/python3
-# ansible_host: 1.1.1.10
+ansible_host: "{{ vault_hassio_ip }}"
 
 # common
-common_hostname: hassio
+common_hostname: "{{ vault_hassio_hostname }}"
 common_host_location: office
 
 # raspberrypi-config
-enable_ssh: 0 
+enable_ssh: 0
 enable_vnc: 1
 enable_overscan: 0
 enable_camera: 1
