--- a/install.yml
+++ b/install.yml
@@ -1,17 +1,15 @@
 ---
-
 - name: Prepare all hosts
   hosts: all
   collections:
-      - jmd_collection.home_stack
-      - community.docker
+    - jmd_collection.home_stack
+    - community.docker
   gather_facts: true
   roles:
-      - role: common
-      - role: raspberrypi-config
-      - role: docker-install
-      - role: docker-containers/portainer-agent
-
+    - role: common
+    - role: raspberrypi-config
+    - role: docker-install
+    - role: docker-containers/portainer-agent
 
 #############
 #    NAS    #
@@ -21,54 +19,38 @@
   hosts: nas
   become: true
   collections:
-      - community.docker
+    - community.docker
   gather_facts: true
   vars_files:
-      - host_vars/nascsch.cklan/secret.yml
+    - ./secret.yml
   roles:
-      - role: docker-containers/http-services/nginx-manager
-      - role: docker-containers/http-services/dashy
-      - role: docker-containers/http-services/pialert
-      - role: docker-containers/nextcloud
+    - role: docker-containers/plex
+    - role: docker-containers/nextcloud
+    - role: docker-containers/adguardhome
+    - role: docker-containers/cloudflared-ddns
+    - role: docker-containers/portainer-agent
+    - role: docker-containers/http-services/dashy
+    - role: docker-containers/http-services/traefik
   post_tasks:
-      - name: Create network for http-services
-        community.docker.docker_network:
-            enable_ipv6: false
-            driver: bridge
-            ipam_config:
-                - iprange: "{{ nas_http_service_ip_range }}"
-                  subnet: "{{ nas_http_service_ip_range }}"
-            ipam_driver: default
-            name: "{{ nas_http_service_net }}"
-            connected:
-                - "{{ nginx_manager_container_name }}"
-                - "{{ dashy_container_name }}"
-                - "{{ pialert_container_name }}"
-
-      - name: Associate Nginx Proxy Manager with nextcloud_internal
-        community.docker.docker_network:
-            name: nextcloud_internal
-            connected:
-                - "{{ nginx_manager_container_name }}"
-            appends: true
-
-############
-#  ACCESS  #
-############
-
-- name: Install access services
-  hosts: access
-  # become: true
-  collections:
-      - community.docker
-  gather_facts: true
-
-  roles:
-      - role: docker-containers/cloudflared-ddns
-      - role: docker-containers/wireguard
-
-
-
+    - name: Create network for http-services
+      community.docker.docker_network:
+        enable_ipv6: false
+        driver: bridge
+        ipam_config:
+          - iprange: "{{ nas_proxy_net_ip_range }}"
+            subnet: "{{ nas_proxy_net_ip_range }}"
+        ipam_driver: default
+        name: "{{ nas_proxy_net }}"
+        connected:
+          - "{{ nextcloud_container_name }}"
+          - "{{ dashy_container_name }}"
+          - "{{ adguardhome_container_name }}"
+          - "{{ traefik_container_name }}"
+      notify:
+        - "restart nextcloud"
+        - "restart dashy"
+        - "restart adguardhome"
+        - "restart traefik"
 ############
 #  HASSIO  #
 ############
@@ -77,4 +59,4 @@
   hosts: hassio.cklan
   become: true
   roles:
-      - role: homeassistant
+    - role: homeassistant
