--- a/roles/docker-containers/nextcloud/defaults/main.yml
+++ b/roles/docker-containers/nextcloud/defaults/main.yml
@@ -1,9 +1,9 @@
 service_name: nextcloud
-nextcloud_ip_range: "{{ vault_nextcloud_ip_range }}"
-nextcloud_db_container_name: nas-nextcloud-db
+nextcloud_subnet: "{{ vault_nextcloud_subnet }}"
+nextcloud_db_container_name: nextcloud-db
 nextcloud_ip: "{{ vault_nextcloud_ip }}"
-nextcloud_redis_container_name: nas-nextcloud-redis
-nextcloud_container_name: nas-nextcloud-app
+nextcloud_redis_container_name: nextcloud-redis
+nextcloud_container_name: nextcloud
 nextcloud_group_user_id: "{{ vault_nextcloud_group_user_id }}"
 nextcloud_user_id: "{{ vault_nextcloud_user_id }}"
 nextcloud_mysql_root_pass: "{{ vault_nextcloud_mysql_root_pass }}"
@@ -11,7 +11,6 @@ nextcloud_mysql_pass: "{{ vault_nextcloud_mysql_pass }}"
 nextcloud_mysql_db: "{{ vault_nextcloud_mysql_db }}"
 nextcloud_mysql_user: "{{ vault_nextcloud_mysql_user }}"
 nextcloud_trusted_proxies: "{{ vault_nextcloud_trusted_proxies }}"
-nextcloud_ddns_name: "{{ vault_nextcloud_ddns_name }}"
 
 nextcloud_dirs:
   - html
