--- a/roles/docker-containers/cloudflared-ddns/defaults/main.yml
+++ b/roles/docker-containers/cloudflared-ddns/defaults/main.yml
@@ -1,5 +1,2 @@
 service_name: cloudflared-ddns
-cloudflared_ddns_container_name: nas-cloudflared-ddns
-cloudflared_ddns_api_key: "{{ vault_cloudflared_ddns_api_key }}"
-cloudflared_ddns_zone: "{{ vault_cloudflared_ddns_zone }}"
-cloudflared_ddns_subdomain: "{{ vault_cloudflared_ddns_subdomain }}"
+cloudflared_ddns_container_name: cloudflared-ddns
