--- a/inventory.yml
+++ b/inventory.yml
@@ -4,7 +4,16 @@ all:
     nas:
       hosts:
         nascsch.cklan:
-        
-    access:
+
+    vpn:
       hosts:
         nascsch.cklan:
+        ckaccess.cklan:
+
+    dns:
+      hosts:
+        nascsch.cklan:
+        ckaccess.cklan:
+    hassio:
+      hosts:
+        hassio.cklan:
