--- a/roles/docker-containers/nextcloud/tasks/main.yml
+++ b/roles/docker-containers/nextcloud/tasks/main.yml
@@ -54,6 +54,12 @@
     mode: "0755"
   loop: "{{ nextcloud_dirs }}"
 
+- name: Create data directory for Nextcloud Application
+  ansible.builtin.file:
+    path: "{{ nextcloud_data_dir }}"
+    state: directory
+    mode: "0755"
+
 - name: Deploy Nextcloud Application
   docker_container:
     name: "{{ nextcloud_container_name }}"
@@ -76,13 +82,13 @@
       "PUID": "{{ nextcloud_user_id }}"
       "PGID": "{{ nextcloud_group_user_id }}"
     labels:
-      traefik.enable: true
-      traefik.http.routers.nextcloud.rule: "Host(`{{ nextcloud_fqdn }}`)"
+      traefik.enable: "true"
+      traefik.http.routers.nextcloud.rule: Host(`{{ nextcloud_fqdn }}`)
       traefik.http.routers.nextcloud.entrypoints: "web,websecure"
       traefik.http.routers.nextcloud.tls: "true"
       traefik.http.routers.nextcloud.tls.certresolver: "cloudflared"
       traefik.http.routers.nextcloud.service: "nextcloud"
-      traefik.http.services.nextcloud.loadbalancer.server.port: 80
+      traefik.http.services.nextcloud.loadbalancer.server.port: "80"
       traefik.http.middlewares.nextcloud-redirect.redirectscheme.scheme: "https"
       traefik.http.middlewares.nextcloud-redirect.redirectscheme.permanent: "true"
       traefik.http.middlewares.nextcloud-regex.redirectRegex.regex: "https://(.*)/.well-known/(card|cal)dav"
@@ -97,7 +103,7 @@
       - "{{ docker_data_dir }}/{{ service_name }}/{{ nextcloud_container_name }}/html:/var/www/html"
       - "{{ docker_data_dir }}/{{ service_name }}/{{ nextcloud_container_name }}/config:/var/www/html/config"
       - "{{ docker_data_dir }}/{{ service_name }}/{{ nextcloud_container_name }}/custom_apps:/var/www/html/custom_apps"
-      - "{{ docker_data_dir }}/{{ service_name }}/{{ nextcloud_container_name }}/data:/var/www/html/data"
+      - "{{ nextcloud_data_dir }}:/var/www/html/data"
     links:
       - "{{ nextcloud_db_container_name }}"
       - "{{ nextcloud_redis_container_name }}"
