Squashed commit of the following:
commit 8d0771a575266ba8e49155048b07d5f8932aec35
Merge: 25a285c defb264
Author: Charis Kozis <harisjmd@gmail.com>
Date:   Fri May 5 23:38:27 2023 +0300

    Merge pull request #5 from harisjmd/feature/portainer

    Adding portainer-ce container and also in Traefik

commit defb264cbdbd29c2cf2b91081133d5610afecb13
Merge: e12e2fb 25a285c
Author: Charis Kozis <charalampos.kozis@gmail.com>
Date:   Fri May 5 23:37:08 2023 +0300

    Merge branch 'master' into feature/portainer

commit 25a285c2f0ffa1a5472c440c22ed5ca7ba3ad304
Merge: 8034e70 274fa52
Author: Charis Kozis <harisjmd@gmail.com>
Date:   Fri May 5 23:31:21 2023 +0300

    Merge pull request #4 from harisjmd/bugfix/traefik-adguard1

    Adding secondary adguard host to traefik

commit e12e2fb9f2c069efc165307e82c5f98c6c00cdc7
Author: Charis Kozis <charalampos.kozis@gmail.com>
Date:   Fri May 5 23:28:47 2023 +0300

    Adding portainer-ce container and also in Traefik

commit 274fa5237f9ac1d3d488db5e9dc4001895484a95
Author: Charis Kozis <charalampos.kozis@gmail.com>
Date:   Fri May 5 22:56:31 2023 +0300

    Adding secondary adguard host to traefik
    - Fixing restart policy
    - Updating AdGuard conf to latest version

commit 8034e70e5f0a26197b6d4f3443bfdc5b3caaefe9
Author: Charis Kozis <charalampos.kozis@gmail.com>
Date:   Tue May 2 23:23:37 2023 +0300

    Adding Vault example

commit ad3910e5cfe2aeb46b7e8d43778d84f3c70d56b1
Merge: 62fdf7c 8cb6e60
Author: Charis Kozis <harisjmd@gmail.com>
Date:   Tue May 2 22:56:00 2023 +0300

    Merge pull request #3 from harisjmd/sync

    Sync

commit 8cb6e609fc8882222f6dcc7efc516012e197fb69
Merge: abfa3ff a46f6aa
Author: Charis Kozis <harisjmd@gmail.com>
Date:   Tue May 2 22:41:09 2023 +0300

    Merge pull request #2 from harisjmd/bugfix/dir-and-dns

    Fixes:

commit a46f6aadeb614231963e24418cd4e4d30a9d34aa
Author: Charis Kozis <charalampos.kozis@gmail.com>
Date:   Tue May 2 22:39:36 2023 +0300

    Fixes:
    - Nextcloud dir mapping
  

--- a/host_vars/nascsch.cklan/vars.yml
+++ b/host_vars/nascsch.cklan/vars.yml
@@ -1,11 +1,8 @@
 ansible_ssh_user: pi
 ansible_python_interpreter: /usr/bin/python3
-ansible_host: "192.168.2.250"
+ansible_host: "{{ vault_nas_ip }}"
 
-nas_proxy_net_ip_range: "{{ vault_nas_proxy_net_ip_range }}"
 nas_proxy_net: proxy_net
-global_dir: "{{ vault_nas_global_dir }}"
-docker_data_dir: "{{ global_dir }}/docker-volumes"
 nas_ip: "{{ vault_nas_ip }}"
 
 # common
@@ -26,10 +23,10 @@ gpu_mem: 32
 # omv
 omv_port: "{{ vault_omv_port }}"
 
-# wireguard
-wireguard_subnet: "{{ vault_wireguard_subnet }}"
-
-# dashy
+# adguard
+adguard_fqdn: "{{ vault_adguard2_fqdn }}"
+adguard_http_port: "{{ vault_adguard_http_port }}"
+adguard_https_port: "{{ vault_adguard_https_port }}"
 
 # nextcloud
 nextcloud_subnet: "{{ vault_nextcloud_subnet }}"
@@ -47,15 +44,12 @@ cloudflared_ddns_api_key: "{{ vault_cloudflared_ddns_api_key }}"
 cloudflared_ddns_zone: "{{ external_domain }}"
 cloudflared_ddns_subdomain: "{{ vault_cloudflared_ddns_subdomain }}"
 
-# adguard
-adguard_user: "{{ vault_adguard_user }}"
-adguard_password: "{{ vault_adguard_password }}"
-
 # traefik
 traefik_cf_email: "{{ vault_traefik_cf_email }}"
 traefik_cf_dns_api_token: "{{ vault_traefik_cf_dns_api_token }}"
 traefik_serv_hassio_url: "http://{{ vault_hassio_ip }}:{{ vault_hassio_port }}"
 traefik_serv_omv_url: "http://{{ vault_nas_ip }}:{{ omv_port }}"
+traefik_serv_adguardhome1_url: "http://{{ vault_ckaccess_ip }}:{{ adguard1_http_port }}"
 traefik_serv_src_ips: "127.0.0.1/32,{{ local_subnet }},{{ nas_proxy_net_ip_range }},{{ wireguard_subnet }}"
 traefik_auth: "{{ vault_traefik_auth }}"
 
