--- a/install.yml
+++ b/install.yml
@@ -5,12 +5,27 @@
     - jmd_collection.home_stack
     - community.docker
   gather_facts: true
+  vars_files:
+    - ./secret.yml
   roles:
     - role: common
     - role: raspberrypi-config
     - role: docker-install
     - role: docker-containers/portainer-agent
+  tags:
+    - core
 
+- name: Install DNS servers
+  hosts: dns
+  collections:
+    - community.docker
+  gather_facts: true
+  vars_files:
+    - ./secret.yml
+  roles:
+    - role: docker-containers/adguardhome
+  tags:
+    - dns
 #############
 #    NAS    #
 #############
@@ -20,17 +35,19 @@
   become: true
   collections:
     - community.docker
-  gather_facts: true
+  gather_facts: false
   vars_files:
     - ./secret.yml
   roles:
     - role: docker-containers/plex
     - role: docker-containers/nextcloud
-    - role: docker-containers/adguardhome
     - role: docker-containers/cloudflared-ddns
-    - role: docker-containers/portainer-agent
+    - role: docker-containers/adguardhome
+    - role: docker-containers/portainer
     - role: docker-containers/http-services/dashy
     - role: docker-containers/http-services/traefik
+      tags:
+        - proxy
   post_tasks:
     - name: Create network for http-services
       community.docker.docker_network:
@@ -45,18 +62,17 @@
           - "{{ nextcloud_container_name }}"
           - "{{ dashy_container_name }}"
           - "{{ adguardhome_container_name }}"
+          - "{{ portainer_container_name }}"
           - "{{ traefik_container_name }}"
-      notify:
-        - "restart nextcloud"
-        - "restart dashy"
-        - "restart adguardhome"
-        - "restart traefik"
+      tags:
+        - proxy
 ############
 #  HASSIO  #
 ############
 
 - name: Install Home Assistant
-  hosts: hassio.cklan
+  hosts: hassio
+  gather_facts: false
   become: true
   roles:
     - role: homeassistant
