--- a/roles/docker-containers/http-services/dashy/tasks/main.yml
+++ b/roles/docker-containers/http-services/dashy/tasks/main.yml
@@ -26,7 +26,7 @@
       traefik.http.middlewares.dashy-redirect.redirectscheme.permanent: "true"
       traefik.http.middlewares.dashy-redirect.redirectscheme.scheme: "https"
       traefik.http.routers.dashy.entrypoints: "websecure"
-      traefik.http.routers.dashy.middlewares: "dashy-redirect,dashy-ipwhitelist,gauth@file"
+      traefik.http.routers.dashy.middlewares: "dashy-redirect,dashy-ipwhitelist"
       traefik.http.routers.dashy.rule: Host(`{{ dashy_fqdn }}`)
       traefik.http.routers.dashy.service: "dashy"
       traefik.http.routers.dashy.tls: "true"
