Introduced InfluxDB, Uptime-Kuma and PiAlert - Fixed Prometheus node exporter ports - Fixed PiVPN ip config

--- a/host_vars/nascsch.cklan/vars.yml
+++ b/host_vars/nascsch.cklan/vars.yml
@@ -44,11 +44,15 @@ cloudflared_ddns_api_key: "{{ vault_cloudflared_ddns_api_key }}"
 cloudflared_ddns_zone: "{{ external_domain }}"
 cloudflared_ddns_subdomain: "{{ vault_cloudflared_ddns_subdomain }}"
 
+# pialert
+pialert_port: "{{ vault_pialert_port }}"
+
 # traefik
 traefik_cf_email: "{{ vault_traefik_cf_email }}"
 traefik_cf_dns_api_token: "{{ vault_traefik_cf_dns_api_token }}"
 traefik_serv_hassio_url: "http://{{ vault_hassio_ip }}:{{ vault_hassio_port }}"
 traefik_serv_omv_url: "http://{{ vault_nas_ip }}:{{ omv_port }}"
+traefik_serv_pialert_url: "http://{{ vault_nas_ip }}:{{ pialert_port }}"
 traefik_serv_adguardhome1_url: "http://{{ vault_ckaccess_ip }}:{{ adguard1_http_port }}"
 traefik_serv_src_ips: "127.0.0.1/32,{{ local_subnet }},{{ nas_proxy_net_ip_range }},{{ wireguard_subnet }}"
 traefik_auth: "{{ vault_traefik_auth }}"
@@ -70,3 +74,13 @@ remote_cadvisor_port: "{{ vault_cadvisor_port }}"
 nodeexporter_mode: "local"
 nodeexporter_port: "9100"
 remote_nodeexporter_port: "{{ vault_nodeexporter_port }}"
+
+# influxdb
+influxdb_port: "{{ vault_influxdb_port }}"
+influxdb_admin_user: "{{ vault_influxdb_admin_user }}"
+influxdb_admin_pass: "{{ vault_influxdb_admin_pass }}"
+influxdb_organization: "{{ vault_influxdb_organization }}"
+influxdb_bucket: "{{ vault_influxdb_bucket }}"
+influxdb_admin_token: "{{ vault_influxdb_admin_token }}"
+
+vpn_server_ip: "{{ vault_nas_ip }}"
